--- a/CSS/anuncio.css
+++ b/CSS/anuncio.css
@@ -23,7 +23,7 @@
 
 #containerAnuncio {
     padding: 20px;
-    grid-colum: 1/2;
+    grid-column: 1/2;
     grid-row: 2/3;
     border-radius: 15px;
 }
