--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,6 +6,7 @@ nav {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    height: 250px;
 }
 
 nav input[type="text"] {
@@ -13,6 +14,15 @@ nav input[type="text"] {
     background: url("../img/lupa.svg") no-repeat 7px;
     padding: 5px;
     padding-left: 40px;
+    font-size: 34px;
+}
+
+#buscar {
+    margin-left: 20px;
+}
+
+nav input {
+    font-size: 34px;
 }
 
 #botones {
@@ -28,6 +38,7 @@ nav input[type="text"] {
 #categorias {
     grid-column: 1/2;
     grid-row: 3/4;
+    font-size: 39px;
 }
 
 #listaCategorias {
@@ -65,6 +76,7 @@ nav input[type="text"] {
     width: 20%;
     list-style-type: none;
     line-height: 1.5em;
+    font-size: 33px;
 }
 
 .flechaAbajo {
@@ -81,7 +93,7 @@ nav input[type="text"] {
 #contenedor {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 27% 7% 70% 14%;
+    grid-template-rows: 29% 7% 70% 14%;
 }
 
 /* GENERAL */
@@ -92,8 +104,7 @@ nav input[type="text"] {
 html,
 body {
     margin: 0 auto;
-    font-family: Candara;
-    font-size: 30px;
+    font-family: Candara
 }
 
 header {
@@ -101,11 +112,12 @@ header {
     padding-left: 20px;
     grid-column: 1/2;
     grid-row: 1/2;
+    height: 600px;
 }
 
 header p {
     margin: 0;
-    font-size: 24px;
+    font-size: 35px;
 }
 
 header img {
@@ -123,6 +135,7 @@ footer {
     padding: 5px 0px;
     grid-column: 1/2;
     grid-row: 4/5;
+    font-size: 34px;
 }
 
 #divIconos {
