--- a/CSS/loginRegistro.css
+++ b/CSS/loginRegistro.css
@@ -36,7 +36,7 @@ input[type="email"] {
     padding: 15px;
 }
 
-form input[type="submit"] {
+form input[type="button"] {
     width: 80%;
     padding: 20px;
     border-radius: 20px;
