--- a/css/anuncio.css
+++ b/css/anuncio.css
@@ -28,7 +28,7 @@
 
 #contenedor4 {
     display: grid;
-    grid-template-rows: 13% 25% 80% 6%;
+    grid-template-rows: 23% 25% 80% 6%;
     grid-template-columns: 100%;
 }
 
@@ -106,12 +106,12 @@ header {
 }
 
 header p {
-    margin: 0;
-    font-size: 34px;
+    margin-top: 40px;
+    font-size: 35px;
 }
 
 header img {
-    width: 50%;
+    width: 100%;
 }
 
 footer {
