--- a/css/loginRegistro.css
+++ b/css/loginRegistro.css
@@ -2,7 +2,7 @@
 #contenedor2 {
     height: 130%;
     display: grid;
-    grid-template-rows: 30% 1% 60% 16%;
+    grid-template-rows: 25% 1% 60% 16%;
     grid-template-columns: 100%;
 }
 
@@ -84,12 +84,11 @@ header {
 }
 
 header p {
-    margin: 0;
-
+    margin-top: 50px;
 }
 
 header img {
-    width: 50%;
+    width: 100%;
 }
 
 footer {
