--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -95,7 +95,7 @@ input[type="email"] {
     margin-bottom: 30px;
 }
 
-#Datos input[type="button"] {
+#Datos input[type="button"], input[type="submit"] {
     width: 40%;
     height: 10%;
     font-size: 30px;
