--- a/css/loginRegistro.css
+++ b/css/loginRegistro.css
@@ -1,9 +1,7 @@
 /* REGISTRO.PHP y LOGIN.PHP */
 #contenedor2 {
-    height: 130%;
     display: grid;
-    grid-template-rows: 24% 1% 60% 16%;
-    grid-template-columns: 100%;
+    grid-template-rows: auto auto auto auto;
 }
 
 form {
@@ -22,45 +20,54 @@ form p {
 
 form h1 {
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
     line-height: 1.3em;
 }
 
-form input[type="text"],
-input[type="email"] {
-    width: 80%;
-    height: 80px;
-    border: 2px solid black;
-    margin-bottom: 50px;
-    font-size: 30px;
-    padding: 15px;
+form input[type="password"],
+input[type="email"], input[type="text"] {
+    width: 75%;
+    border: 1px solid #850018;
+    border-radius: 20px;
+    padding: 25px 25px 25px 25px;
+    min-height: 90px;
+    margin-bottom: 20px;
+    outline: none;
+    background-color: #ebebeb;
+    font-size: 45px;
 }
 
 form input[type="button"], form input[type="submit"] {
-    width: 80%;
+    width: 75%;
     padding: 20px;
     border-radius: 20px;
-    border: 1px solid black;
-    font-size: 30px;
+    border: 1px solid #690000;
+    font-size: 50px;
     margin: 50px 0px 100px 0px;
+    background-color: #850018;
+    color: white;
 }
 
 #divLogin {
     width: 100%;
     text-align: center;
     margin-bottom: 100px;
+    color: #690000;
+    text-decoration: #690000;
+    font-size: 140%;
 }
 
 #divLogin a {
     font-size: 50px;
     list-style: none;
+    color: #690000;
 }
 
 #separar {
     height: 2px;
     background: black;
     width: 100%;
-    margin-bottom: 100px;
+    margin-bottom: 90px;
 }
 
 /* GENERAL */
@@ -73,6 +80,7 @@ body {
     margin: 0 auto;
     font-family: Candara;
     font-size: 30px;
+    background-color: #dedcdc;
 }
 
 header {
