--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,6 @@ nav input[type="text"] {
 #categorias {
     grid-column: 1/2;
     grid-row: 3/4;
-    font-size: 20px;
     padding: 0 1vw;
 }
 
@@ -233,8 +232,11 @@ footer {
     padding: 5px 0px;
     grid-column: 1/2;
     grid-row: 4/5;
-    font-size: 20px;
+    font-size: 4.5vw;
+    position: relative;
+    bottom: 0vh;
 }
+footer p{}
 
 #divIconos {
     width: 100%;
