Js - CSS busqueda arreglando

--- a/css/busqueda.css
+++ b/css/busqueda.css
@@ -17,7 +17,7 @@
 
 .anuncio {
     margin: 20px 10px 20px 10px;
-    width: 47%;
+    width: 90%;
     border-radius: 15px;
     padding: 15px;
     background-color: white;
@@ -61,9 +61,7 @@ nav {
     grid-row: 2/3;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-    height: 250px;
 }
 
 nav input[type="text"] {
@@ -80,9 +78,22 @@ nav input[type="text"] {
 
 #botones {
     display: flex;
-    justify-content: center;
-    width: 100%;
+    justify-content: space-around;
+    flex-basis: 100%;
     flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+input[type="button"] {
+    font-size: 4.5vw;
+    border-radius: 5px;
+    border: 2px solid #690000;
+    color: #850018;
+    background: linear-gradient(to right, #850018 50%, #ebebeb 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all .25s ease-out;
+    padding: 10px;
 }
 
 nav a {
@@ -99,9 +110,8 @@ nav a:hover {
     transition: background-color 300ms ease-out;
 }
 
-nav form input[type="submit"],nav input[type="button"] {
+nav form input[type="submit"] {
     font-size: 4.5vw;
-    padding: 10px;
     border-radius: 5px;
     border: 2px solid #690000;
     color: #850018;
@@ -111,42 +121,42 @@ nav form input[type="submit"],nav input[type="button"] {
     transition: all .25s ease-out;
 }
 
-nav form input[type="submit"]:hover, nav input[type="button"]:hover{
+nav form input[type="submit"]:hover, nav input[type="button"]:hover {
     background-position: left bottom;
     color: white;
 }
 
 #enlaces {
-    width: 100%;
+    flex-basis: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    margin-bottom: 10px;
 }
 
 nav input[type="button"] {
-    width: 46%;
-    margin-right: 20px;
+    flex-basis: 40%;
 }
 
 #enlaces a {
-    width: 46%;
+    flex-basis: 40%;
     text-align: center;
-    margin-top: 30px;
-    margin-right: 20px;
+    padding: 10px;
 }
 
 form {
     width: 100%;
-    padding: 20px;
+    padding: 0 10px;
+    display: flex;
+    margin: 0 10px 10px 10px;
 }
 
 nav input[type="text"] {
     font-size: 4.5vw;
-    width: 75%;
+    flex: 2;
     border: 2px solid #850018;
     border-radius: 5px;
     padding: 5px 5px 5px 5px;
     min-height: 45px;
-    margin-bottom: 20px;
     outline: none;
     background-color: #ebebeb;
     user-select: revert;
@@ -155,5 +165,5 @@ nav input[type="text"] {
 #contenedor3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: auto 21% auto auto;
+    grid-template-rows: auto auto auto auto;
 }
