login y registro en modo escritorio

--- a/css/loginRegistro.css
+++ b/css/loginRegistro.css
@@ -90,3 +90,41 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
 #pass {
     background-color: #a7afae;
 }
+
+
+@media (min-width: 600px) {
+    header img {
+        width: 50%;
+    }
+
+    form input[type="password"],
+    input[type="email"], input[type="text"] {
+        padding: 5px 15px;
+        font-size: 30px;
+        width: 60%;
+    }
+
+    form h1 {
+        font-size: 45px;
+    }
+
+    form input[type="submit"], form input[type="button"] {
+        height: 15%;
+        font-size: 30px;
+        padding: 10px 20px;
+        width: 60%;
+        margin-bottom: 30px;
+    }
+
+    #divLogin a {
+        font-size: 23px;
+    }
+
+    footer p, a {
+        font-size: 23px;
+    }
+
+    #divIconos a {
+        width: auto;
+    }
+}
