--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -1,5 +1,4 @@
 /* EDITARPERFIL.PHP */
-
 #contenedor5 {
     display: grid;
     grid-template-rows: 30% 85% 30%;
@@ -12,6 +11,7 @@ header {
 }
 header p {
     margin-top: 30px;
+    margin-left: 30px;
 }
 
 #datos {
@@ -46,7 +46,7 @@ input[type="email"] {
 }
 
 #Datos input[type="button"], #Datos input[type="submit"] {
-    font-size: 4.5vw;
+    font-size: 4vw;
     padding: 10px;
     border-radius: 5px;
     border: 2px solid #690000;
@@ -78,4 +78,48 @@ label {
 
 h1 {
     margin-bottom: 0;
+}
+
+@media screen and (min-width: 769px) {
+    header img {
+        width: 50%;
+        margin-bottom: 50px;
+    }
+
+    #contenedor5 {
+        display: grid;
+        grid-template-rows: auto auto auto;
+        grid-template-columns: 100%;
+    }
+
+    form input[type="password"],
+    input[type="email"], input[type="text"] {
+        padding: 5px 15px;
+        font-size: 30px;
+        width: 60%;
+    }
+
+    form h1 {
+        font-size: 45px;
+    }
+
+    form input[type="submit"], form input[type="button"] {
+        height: 15%;
+        font-size: 30px;
+        padding: 10px 20px;
+        width: 60%;
+        margin-bottom: 30px;
+    }
+
+    label p {
+        font-size: 23px;
+    }
+
+    footer p, a {
+        font-size: 23px;
+    }
+
+    #divIconos a {
+        width: auto;
+    }
 }
