--- a/css/publicarAnuncio.css
+++ b/css/publicarAnuncio.css
@@ -25,29 +25,27 @@ header {
 
 #datos label{
     flex-basis: 100%;
-    font-size: 5vw;
+    font-size: 6.5vw;
 }
 
 input[type="text"] {
-    font-size: 3.8vw;
+    font-size: 5vw;
     flex-basis: 100%;
     border: 2px solid #850018;
     border-radius: 5px;
-    min-height: 45px;
     margin-bottom: 20px;
     outline: none;
     background-color: #ebebeb;
     user-select: revert;
-    padding-left: 5px;
+    padding: 10px;
 }
 
 textarea {
-    font-size: 3.8vw;
+    font-size: 5vw;
     flex-basis: 100%;
     border: 2px solid #850018;
     border-radius: 5px;
     padding: 5px 5px 5px 5px;
-    min-height: 45px;
     margin-bottom: 20px;
     outline: none;
     background-color: #ebebeb;
@@ -56,7 +54,7 @@ textarea {
 
 input[type="file"] {
     flex-basis: 100%;
-    font-size: 3.8vw;
+    font-size: 5vw;
     margin-bottom: 1em;
 }
 
@@ -70,7 +68,7 @@ h1 {
 }
 
 select {
-    font-size: 3.8vw;
+    font-size: 5vw;
     width: 100%;
     margin-bottom: 25px;
     background-color: #ebebeb;
